--- a/dem_proj.Rmd
+++ b/dem_proj.Rmd
@@ -8,11 +8,21 @@ output: html_document
 ```{r, message = F}
 library(rio)
 library(tidyverse)
-```
+library(ggpubr)
 
-Select participant ID, age, and depression symptom variables from wave1
+```
+Import wave I and V from ADD Health.
+
+
+Wave I: select participant ID, birth year, interview year, 19 CESD depression symptoms, and demographic variables (from contextual data).
+
+Wave IV: select biological sex, and the 10 CESD items that were consistent with wave I (10/11)
+
+Wave V: select if ever been diagnosed with depression and at what age diagnosed.
 ```{r}
 wave1 <- import('data/wave1.rda')
+wave11 <- import('data/wave1_1.rda')
+wave4 <- import('data/wave4.rda')
 wave5 <- import('data/wave5.rda')
 
 
@@ -22,5 +32,534 @@ dat1 <- wave1 %>%
          H1FS7, H1FS8, H1FS9, H1FS10, H1FS11, H1FS12,
          H1FS13, H1FS14, H1FS15, H1FS16, H1FS17, 
          H1FS18, H1FS19)
+         
+dat11 <- wave11 %>%
+  select(AID,
+         BST90P02, BST90P05, BST90P06, BST90P08,
+         BST90P10, BST90P13, BST90P15, BST90P19,
+         BST90P20, BST90P23, BST90P24)
+
+
+dat4 <- wave4 %>%
+  select(AID, BIO_SEX4,
+         H4MH18:H4MH27)
+
+
+dat5 <- wave5 %>%
+  select(AID, H5ID6G, H5ID6GA)
 ```
+
+
+
+Join the data frames by ID. Wave I had n=6504, wave IV had n=5114 and wave V had n=4196, thus the final data frame was reduced to those who were sampled in all 3 data sets, yielding n=3713.
+
+
+Rename variable names
+
+
+View frequency tables for all variables
+
+```{r}
+dat <- inner_join(dat1, dat5, by = "AID")
+
+dat <- inner_join(dat, dat4, by = "AID")
+
+dat <- inner_join(dat, dat11, by = "AID")
+
+
+colnames(dat) <- c("ID", "B_YR", "I_YR", 
+                   "D1", "D2", "D3", "D4", "D5",
+                   "D6", "D7", "D8", "D9", "D10", 
+                   "D11", "D12", "D13", "D14", "D15",
+                   "D16", "D17", "D18", "D19",
+                   "DEPR", "AGEDEPR",
+                   "bio_sex", 
+                   "D1_W4", "D3_W4", "D4_W4", "D5_W4",
+                   "D6_W4", "D7_W4", "D11_W4",
+                   "D15_W4", "D16_W4", "D17_W4",
+                   "race", "hh_sex", "hh_median_age",
+                   "hh_maritalstatus", "childrn_under_5",
+                   "hh_type", "med_hh_income", "prop_below_pov",
+                   "hh_edu", "unemployment", "hh_occupation")
+
+
+```
+
+
+Clean up age data to compute W1 age by subtracting B_YR from I_YR
+
+Then remove B_YR and I_YR
+
+```{r}
+
+dat <- dat %>%
+  mutate(B_YR = case_when(B_YR == "(74) (74) 1974" ~ 1974,
+                          B_YR == "(75) (75) 1975" ~ 1975,
+                          B_YR == "(76) (76) 1976" ~ 1976,
+                          B_YR == "(77) (77) 1977" ~ 1977,
+                          B_YR == "(78) (78) 1978" ~ 1978,
+                          B_YR == "(79) (79) 1979" ~ 1979,
+                          B_YR == "(80) (80) 1980" ~ 1980,
+                          B_YR == "(81) (81) 1981" ~ 1981,
+                          B_YR == "(82) (82) 1982" ~ 1982,
+                          B_YR == "(83) (83) 1983" ~ 1983))
+
+
+dat <- dat %>%
+  mutate(I_YR = case_when(I_YR == "(94) (94) 1994" ~ 1994,
+                          I_YR == "(95) (95) 1995" ~ 1995))
+
+dat <- dat %>%
+  mutate(AGE = I_YR - B_YR, .after = I_YR)
+
+dat <- dat %>%
+  select(-c(B_YR, I_YR))
+
+
+```
+
+
+
+
+
+
+Clean up depression variables by converting factors to numeric. Since all response options are the same for D1-D19, can create a function for this task
+
+
+```{r}
+fun <- function(df, DX){
+  df <- df %>%
+    mutate(!!sym(DX) := case_when(!!sym(DX) == "(0) (0) Never/rarely" ~ 0,
+                             !!sym(DX) == "(1) (1) Sometimes" ~ 1,
+                             !!sym(DX) == "(2) (2) A lot of the time" ~ 2,
+                             !!sym(DX) == "(3) (3) Most/all of the time" ~ 3))
+  return(df)
+}
+
+
+#WAVE 1
+#These questions will ask about how you feel emotionally and about how you feel in general. How often was each of the following things true during the past week?
+
+####################    D1 - BOTHER #############
+# You were bothered by things that usually don’t bother you
+dat <- fun(df=dat, DX='D1')
+#####################       D2 - LOW APPETITE   ###################
+# You didn't feel like eating, your appetite was poor.
+dat <- fun(df=dat, DX='D2')
+#####################       D3 - BLUES   ###################
+# You felt that you could not shake off the blues, even with help from
+# your family and your friends.
+dat <- fun(df=dat, DX='D3')
+#####################       D4 - GOOD AS OTHERS   ###################
+# You felt that you were just as good as other people.
+dat <- fun(df=dat, DX='D4')
+#####################       D5 - CONCENTRATE   ###################
+# You had trouble keeping your mind on what you were doing.
+dat <- fun(df=dat, DX='D5')
+#####################       D6 - DEPRESSED   ###################
+# You felt depressed
+dat <- fun(df=dat, DX='D6')
+###################        D7 - FATIGUE       ##################
+# You felt that you were too tired to do things. 
+dat <- fun(df=dat, DX='D7')
+###################      D8 - HOPE       ##################
+# You felt hopeful about the future.
+dat <- fun(df=dat, DX='D8')
+###################      D9 - FAILURE       ##################
+# You thought your life had been a failure.
+dat <- fun(df=dat, DX='D9')
+###################      D10 - FEARFUL       ##################
+# You felt fearful.
+dat <- fun(df=dat, DX='D10')
+###################      D11 - HAPPY       ##################
+# You were happy
+dat <- fun(df=dat, DX='D11')
+###################      D12 - TALKED LESS       ##################
+# You talked less than usual.
+dat <- fun(df=dat, DX='D12')
+###################      D13 - TALKED LESS       ##################
+# You felt lonely
+dat <- fun(df=dat, DX='D13')
+###################      D14 - UNFRIENDLY      ##################
+# People were unfriendly to you.
+dat <- fun(df=dat, DX='D14')
+###################      D15 - ENJOYED LIFE      ##################
+# You enjoyed life. 
+dat <- fun(df=dat, DX='D15')
+###################      D16 - SAD        ##################
+# You felt sad
+dat <- fun(df=dat, DX='D16')
+###################      D17 - DISLIKE        ##################
+# You felt that people disliked you
+dat <- fun(df=dat, DX='D17')
+###################      D18 - GET STARTED        ##################
+# It was hard to get started doing things.
+dat <- fun(df=dat, DX='D18')
+###################      D19 - SUICIDAL IDEATION       ##################
+# You felt life was not worth living
+dat <- fun(df=dat, DX='D19')
+
+
+
+fun <- function(df, DX){
+  df <- df %>%
+    mutate(!!sym(DX) := case_when(!!sym(DX) == "(0) (0) Never or rarely" ~ 0,
+                             !!sym(DX) == "(1) (1) Sometimes" ~ 1,
+                             !!sym(DX) == "(2) (2) A lot of the time" ~ 2,
+                             !!sym(DX) == "(3) (3) Most of the time or all of the time" ~ 3))
+  return(df)
+}
+
+#WAVE 4
+#Now, think about the past seven days. How often was each of the following things true during the past seven days:
+
+# You were bothered by things that usually don't bother you. 
+dat <- fun(df=dat, DX='D1_W4')
+# You could not shake off the blues, even with help from your family and your friends. 
+dat <- fun(df=dat, DX='D3_W4')
+# You felt you were just as good as other people. 
+dat <- fun(df=dat, DX='D4_W4')
+# You had trouble keeping your mind on what you were doing
+dat <- fun(df=dat, DX='D5_W4')
+# You felt depressed
+dat <- fun(df=dat, DX='D6_W4')
+# You felt that you were too tired to do things.
+dat <- fun(df=dat, DX='D7_W4')
+# You felt happy
+dat <- fun(df=dat, DX='D11_W4')
+# You enjoyed life
+dat <- fun(df=dat, DX='D15_W4')
+# You felt sad
+dat <- fun(df=dat, DX='D16_W4')
+#You felt that people disliked you
+dat <- fun(df=dat, DX='D17_W4')
+
+
+```
+
+
+
+
+
+
+
+
+
+Create a total depression severity variable using the sums score from wave IV
+```{r}
+dat <- dat %>%
+  mutate(D_W4_TOTAL = D1_W4+D3_W4+D4_W4+D5_W4+D6_W4+D7_W4+D11_W4+D15_W4+D16_W4+D17_W4)
+
+```
+
+
+Convert 997s in "How old were you when you were diagnosed by a doctor, nurse or 
+other health care provider with depression?" from wave V
+```{r}
+dat[, 23][dat[, 23] == 997] <- NA
+```
+
+
+Create a new data frame with adolescents only, and remove those who reported being diagnosed with depression at adolescence. Thus, only those who were adolescents at Wave I, and have not been diagnosed with depression at Wave V or reported being diagnosed with depression as an adult at Wave 5 are included.
+
+This allows us to predict adult depression (W5) from adolescent (W1) symptomatology
+
+N = 3713 -> 2688
+```{r}
+dat_adol <- dat %>%
+  subset(AGE <= 17)
+
+
+dat_adol <- dat_adol[-which(dat_adol$AGEDEPR<18),]
+```
+
+```{r, message = F}
+library(qgraph)          #visualize networks
+library(mgm)           #mixed graphical modeling
+library(bootnet)         # runs all basic network analyses
+library(NetworkComparisonTest)  #compare networks
+library(networktools)         #bridge symptoms, goldbricker for node select
+```
+
+
+
+```{r}
+nameslong <- c(
+  "You were bothered by things that usually don’t bother you.",
+  "You didn’t feel like eating, your appetite was poor.",
+  "Couldn't shake off blues",
+  "You felt that you were just as good as other people.",
+  "You had trouble keeping your mind on what you were doing.",
+  "You felt depressed.",
+  "You felt that you were too tired to do things.",
+  "You felt hopeful about the future.",
+  "You thought your life had been a failure.",
+  "You felt fearful.",
+  "You felt happy.",
+  "You talked less than usual.",
+  "You felt lonely.",
+  "People were unfriendly to you.",
+  "You enjoyed life.",
+  "You felt sad.",
+  "You felt that people disliked you.",
+  "It was hard to get started doing things.",
+  "You felt life was not worth living.")
+```
+
+
+
+Select Wave I CESD items, check if any items would be redundant as nodes in a network i.e., the correlations between two variables and all other variables would be highly similar, and thus may be measuring the same underlying construct.
+
+```{r}
+w1_cesd <- dat_adol %>%  
+  select(D1:D19)
+
+
+gb <- goldbricker(w1_cesd, p = 0.01, method = "hittner2003",
+                 threshold = 0.25, corMin = 0.5, progressbar = T)
+gb
+
+```
+
+Create groups for positive and negatively worded items
+```{r}
+groups=list("Pos"=c(4,8,11,15),"Neg"=c(1:3,5:7,9,10,12:14,16:19)) #create groups
+
+```
+
+
+
+Estimate a network with 19 CESD depression symptom items as nodes, and partial correlations between variables as edges. Edges are regularized using graphical LASSO, and minimizing the EBIC to select the optimal tuning parameter. 
+
+```{r}
+net1 <- estimateNetwork(w1_cesd, default = "EBICglasso",
+                        missing = "pairwise",
+                        signed = T)
+
+
+netplot1 <- plot(net1, layout = "spring", vsize = 3.5, 
+                 border.color="black",
+                 nodeNames = nameslong,
+                 legend.mode = "names",
+                 label.cex = 1.7,
+                 legend.cex = .6,
+                 layoutOffset = c(-.1,0),
+                 GLratio = 2.7,
+                 width = 12, height = 6,
+                  filetype = "pdf", filename = "netplot")
+
+
+
+```
+
+
+\begin{center} <br>
+\includegraphics[width=8in]{netplot.pdf} <br>
+\end{center}
+
+Compute expected influence indices (EI) for each node. The EI of a node is the sum of the weights connected to that node. It's a measure of the "centrality" of a node in a network. These are highly connected nodes, and thus hypothesized to be influential in the network. As depression is conceptualized here as a causal network, central nodes may be important targets for intervention.
+
+
+```{r}
+ef1 <- centralityPlot(net1, include = c("ExpectedInfluence"), scale = 'z-scores',
+                labels = nameslong)
+
+ef1
+```
+
+
+
+
+Run univariable logistic regressions predicting adult depression (W5) from each individual symptom (W1)
+
+
+```{r, message = F}
+
+mod1 <- glm(DEPR ~ D1, 
+            family = "binomial", data = dat_adol)
+or1 <- exp(cbind(OR = coef(mod1), confint(mod1)))[2,]
+
+
+
+mod2 <- glm(DEPR ~ D2, 
+            family = "binomial", data = dat_adol)
+or2 <- exp(cbind(OR = coef(mod2), confint(mod2)))[2,]
+
+
+mod3 <- glm(DEPR ~ D3,
+            family = "binomial", data = dat_adol)
+or3 <- exp(cbind(OR = coef(mod3), confint(mod3)))[2,]
+
+
+mod4 <- glm(DEPR ~ D4, 
+            family = "binomial", data = dat_adol)
+or4 <- exp(cbind(OR = coef(mod4), confint(mod4)))[2,]
+
+
+mod5 <- glm(DEPR ~ D5, 
+            family = "binomial", data = dat_adol)
+or5 <- exp(cbind(OR = coef(mod5), confint(mod5)))[2,]
+
+
+mod6 <- glm(DEPR ~ D6, 
+            family = "binomial", data = dat_adol)
+or6 <- exp(cbind(OR = coef(mod6), confint(mod6)))[2,]
+
+
+mod7 <- glm(DEPR ~ D7, 
+            family = "binomial", data = dat_adol)
+or7 <- exp(cbind(OR = coef(mod7), confint(mod7)))[2,]
+
+
+mod8 <- glm(DEPR ~ D8, 
+            family = "binomial", data = dat_adol)
+or8 <- exp(cbind(OR = coef(mod8), confint(mod8)))[2,]
+
+
+mod9 <- glm(DEPR ~ D9, 
+            family = "binomial", data = dat_adol)
+or9 <- exp(cbind(OR = coef(mod9), confint(mod9)))[2,]
+
+
+
+mod10 <- glm(DEPR ~ D10, 
+            family = "binomial", data = dat_adol)
+or10 <- exp(cbind(OR = coef(mod10), confint(mod10)))[2,]
+
+
+
+mod11 <- glm(DEPR ~ D11,
+            family = "binomial", data = dat_adol)
+or11 <- exp(cbind(OR = coef(mod11), confint(mod11)))[2,]
+
+
+
+mod12 <- glm(DEPR ~ D12, 
+            family = "binomial", data = dat_adol)
+or12 <- exp(cbind(OR = coef(mod12), confint(mod12)))[2,]
+
+
+
+mod13 <- glm(DEPR ~ D13, 
+            family = "binomial", data = dat_adol)
+or13 <- exp(cbind(OR = coef(mod13), confint(mod13)))[2,]
+
+
+
+mod14 <- glm(DEPR ~ D14, 
+            family = "binomial", data = dat_adol)
+or14 <- exp(cbind(OR = coef(mod14), confint(mod14)))[2,]
+
+
+
+mod15 <- glm(DEPR ~ D15, 
+            family = "binomial", data = dat_adol)
+or15 <- exp(cbind(OR = coef(mod15), confint(mod15)))[2,]
+
+
+
+mod16 <- glm(DEPR ~ D16, 
+            family = "binomial", data = dat_adol)
+or16 <- exp(cbind(OR = coef(mod16), confint(mod16)))[2,]
+
+
+mod17 <- glm(DEPR ~ D17, 
+            family = "binomial", data = dat_adol)
+or17 <- exp(cbind(OR = coef(mod17), confint(mod17)))[2,]
+
+
+mod18 <- glm(DEPR ~ D18, 
+            family = "binomial", data = dat_adol)
+or18 <- exp(cbind(OR = coef(mod18), confint(mod18)))[2,]
+
+
+
+mod19 <- glm(DEPR ~ D19, 
+             family = "binomial", data = dat_adol)
+or19 <- exp(cbind(OR = coef(mod19), confint(mod19)))[2,]
+
+```
+
+Bind ORs to data frame with EI, node names, and symptom names
+
+```{r}
+
+
+or_all <- rbind(or1,or2,or3,or4,or5,or6,or7,or8,or9,
+                or10,or11,or12,or13,or14,or15,or16,or17,or18,or19)
+
+
+ef1.df <- cbind(ef1$data$node, nameslong, ef1$data$value)
+
+colnames(ef1.df) <- c('CESD', 'Symptom', 'ExpectedInfluence')
+
+
+results <- cbind(ef1.df, or_all)
+results <- as.data.frame(results)
+options(digits = 2)
+results$ExpectedInfluence <- as.numeric(results$ExpectedInfluence)
+results$OR <- as.numeric(results$OR)
+results$`2.5 %` <- as.numeric(results$`2.5 %`)
+results$`97.5 %` <- as.numeric(results$`97.5 %`)
+
+
+results
+
+```
+
+Correlate ORs with EI
+```{r}
+cor(results$ExpectedInfluence, results$OR)
+```
+
+```{r}
+ggplot(results, aes(x = ExpectedInfluence, y = OR)) + 
+  geom_point(size = 3, shape = 21, color = "black", fill = "black") + 
+  geom_smooth(method = lm) +
+  stat_cor(p.accuracy = 0.001, r.accuracy = 0.01)+
+  labs(y = "OR", x = "Expected Influence", title = "Relationship between EI of adolescent depression symptoms and OR of adult depression diagnosis") + 
+  theme_classic() + theme(plot.title = element_text(hjust = 0.5, size = 8), 
+                          axis.title = element_text(size = 15), 
+                          axis.title.y = element_text(angle = 0, vjust = 0.5), 
+                          axis.text = element_text(size = 11))
+```
+
+
+
+As many factors beyond depressive symtomatology and severity influences a depression diagnosis, we add potentially confounding covariates into the model and run a multiple logistic regression, yielding aORs for each depressive symptom.
+
+
+Covariates include sex, race, 
+
+
+```{r}
+
+mod1.1 <- glm(DEPR ~ D1 + 
+                bio_sex + race + hh_type, 
+            family = "binomial", data = dat)
+or1.1 <- exp(cbind(OR = coef(mod1), confint(mod1)))[2,]
+
+
+
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
